terminando a estilização da tela de login e iniciando a tela do index com a função de cadastrar o saldo do usuario

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -3,10 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pagina Principal</title>
+    <link rel="icon" href="/src/public/images/Logo.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="/src/public/style.css">
 </head>
 <body>
     <header>
+        <div class="dadosContainer">
+            <img  src="/src/public/images/LogoHeader.png" alt="Logo">
+
+            <div class="dadosContent">
+                <p>Nome: ADMIN</p>
+                <br>
+                <span id="saldoText">Saldo: 
+                    <button id="saldoinput">cadastrar Saldo</button>
+                </span>
+            </div>
+        </div>
+
         
     </header>
+
+    <script src="/src/public/app.js"></script>
 </html>
