--- a/src/public/style.css
+++ b/src/public/style.css
@@ -1,3 +1,5 @@
+/* LOGIN */
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
     margin: 0;
@@ -12,10 +14,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image: url(https://img.freepik.com/fotos-gratis/conceito-de-negocio-com-calculadora-close-up_23-2149151160.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    
 }
 
 #loginContent{
-    background-color: aqua;
+    background-color: rgba(153, 255, 255, 0.5);
+    opacity: 0,5;
     width: 40%;
     height: 60%;
     text-align: center;
@@ -25,6 +32,47 @@
     
 }
 
-#login{
-    
+#login-title{
+    font-size: 30px;
+
 }
+
+#login{
+   width: 200px;
+   height: 50px;
+   border: 3px solid ;
+   border-radius: 4px;
+   background-color: #00cccc;
+   font-size: 20px;
+   font-family: 'Kanit', sans-serif;
+   cursor: pointer;
+   transition: 0.5s;
+}
+
+#login:hover{
+  transform: scale(1.1);
+  background-color: #000;
+  color: white;
+  border:  #00cccc;
+}
+
+/* TELA PRINCIPAL (INDEX) */
+
+.dadosContainer img {
+   width: auto;
+   height: 50px;
+   margin: 10px 40px 0 40px;
+   
+}
+
+.dadosContainer{
+    background-color: #00b3b3;
+    height: 70px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.dadosContainer p {
+    margin-right: 100px;
+}
+
