Adicionando botões para funções principais

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -24,5 +24,11 @@
         
     </header>
 
+    <div class="button-container">
+        <div class="button" onclick="alert('Botão 1 clicado!')">Depositar</div>
+        <div class="button" onclick="alert('Botão 2 clicado!')">Despesas</div>
+        <div class="button" onclick="alert('Botão 3 clicado!')">Editar</div>
+    </div>
+
     <script src="/src/public/app.js"></script>
 </html>
