--- a/src/public/style.css
+++ b/src/public/style.css
@@ -76,3 +76,27 @@
     margin-right: 100px;
 }
 
+.button-container {
+    display: flex;
+    margin-top: 20px;
+    gap: 10px;
+    justify-content: center;
+}
+.button {
+    width: 400px;
+    height: 400px;
+    background-color: #4CAF50;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.3s;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border: none;
+    font-size: 30px;
+}
+.button:hover {
+    background-color: #45a049;
+    transform: translateY(-5px);
+}
