fazendo o botão de cadastrar saldo funcionar liberando input e imprimindo o valor na tela, não permitindo que seja adicionado valores não numericos

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -15,13 +15,17 @@
             <div class="dadosContent">
                 <p>Nome: ADMIN</p>
                 <br>
-                <span id="saldoText">Saldo: 
-                    <button id="saldoinput">cadastrar Saldo</button>
-                </span>
+
+                <div id="saldoContainer">
+                    <span id="saldoText">Saldo: 
+                        <button id="saldoInputButton">cadastrar Saldo</button>
+                    </span>
+                </div>
+
             </div>
+
         </div>
 
-        
     </header>
 
     <script src="/src/public/app.js"></script>
