--- a/src/public/style.css
+++ b/src/public/style.css
@@ -76,3 +76,19 @@
     margin-right: 100px;
 }
 
+#saldoContainer {
+    
+    text-align: center;
+}
+
+#saldoText input {
+    margin-right: 10px;
+    padding: 5px;
+    font-size: 14px;
+}
+
+#saldoText button {
+    padding: 5px 10px;
+    font-size: 14px;
+}
+
