ajustando o botão de adicionar saldo, criando o saldoModel e saldo.php e fazendo a primeira tentativa  de salvar no banco de dados

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -18,7 +18,7 @@
 
                 <div id="saldoContainer">
                     <span id="saldoText">Saldo: 
-                        <button id="saldoInputButton">cadastrar Saldo</button>
+                        <button id="saldoInput">cadastrar Saldo</button>
                     </span>
                 </div>
 
