--- a/src/views/receitas.html
+++ b/src/views/receitas.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Receitas</title>
+    <link rel="stylesheet" href="/public/style.css">
 </head>
 <body>
     <header>
+        <div class="dadosContainer">
+            <img src="/public/images/LogoHeader.png" alt="Logo">
+
+            <div class="dadosContent">
+                <p>Nome: ADMIN</p>
+                <br>
+
+                <div id="saldoContainer">
+                    <span id="saldoText">Saldo:
+                        <button id="saldoInput">cadastrar Saldo</button>
+                    </span>
+                </div>
+
+            </div>
+
+        </div>
+
         <h1>Adicionar Nova Receita Financeira</h1>
+
     </header>
 
     <form id="formReceita" action="add_receita.php" method="POST">
@@ -29,36 +48,8 @@
         <button type="submit">Adicionar Receita</button>
     </form>
 
-    <script>
-        document.getElementById('formReceita').addEventListener('submit', function(event) {
-            event.preventDefault(); 
 
-  
-            const receitaId = document.getElementById('id').value;
-            const valor = document.getElementById('valor').value;
-            const data = document.getElementById('data').value;
-            const descricao = document.getElementById('descricao').value;
-            const categoria = document.getElementById('categoria').value;
-
-         
-            const novaReceita = {
-                id: id,
-                valor: parseFloat(valor),
-                data: data,
-                descricao: descricao,
-                categoria: categoria
-            };
-
-           
-            console.log('Nova Receita Adicionada:', novaReceita);
-
-     
-            document.getElementById('formReceita').reset();
-            
-        
-            alert('Receita adicionada com sucesso!');
-        });
-    </script>
     
+    <script src="/public/app.js"></script> 
 </body>
 </html>
