--- a/src/public/style.css
+++ b/src/public/style.css
@@ -122,3 +122,36 @@
 
 /* RECEITAS */
 
+#titulo{
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+    }
+    
+    .flex-container {
+        margin-top: 90px;
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+    }
+    
+    #formReceita {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        max-width: 400px;
+        margin-left: 30px;
+    }
+    
+    #formReceita label,
+    #formReceita input,
+    #formReceita textarea,
+    #formReceita button {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    
+    #formReceita button {
+        align-self: center;
+    }
+    
