--- a/src/views/receitas.html
+++ b/src/views/receitas.html
@@ -3,30 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/src/public/style.css">
     <title>Receitas</title>
 </head>
 <body>
     <header>
-        <h1>Adicionar Nova Receita Financeira</h1>
+        <form action="/controllers/app.php" method="post" id="saldo">
+            <div class="dadosContainer">
+
+                <a href="index.html">
+                    <img src="/public/images/LogoHeader.png" alt="Logo">
+                </a>
+
+                <div class="dadosContent">
+                    <p>Nome: ADMIN</p>
+                    <br>
+
+                    <label for="saldo"> Saldo:</label>
+                    <input type="number" id="saldo" name="saldo">
+
+                </div>
+
+            </div>
+
+        </form>
+
+        <h1 id="titulo">Adicionar Nova Receita Financeira</h1>
     </header>
 
-    <form id="formReceita" action="/controllers/app2.php" method="POST">
-        <label for="id">ID da Receita</label>
-        <input type="text" id="id" name="id" required>
 
-        <label for="valor">Valor</label>
-        <input type="number" id="valor" name="valor" step="0.01" required>
+    <div class="flex-container">
+         <form  id="formReceita" action="/controllers/app2.php" method="POST">
+            <label for="id">ID da Receita</label>
+            <input type="text" id="id" name="id" required>
 
-        <label for="data">Data</label>
-        <input type="date" id="data" name="data" required>
+            <label for="valor">Valor</label>
+            <input type="number" id="valor" name="valor" step="0.01" required>
 
-        <label for="descricao">Descrição (opcional)</label>
-        <textarea id="descricao" name="descricao" rows="4"></textarea>
+            <label for="data">Data</label>
+            <input type="date" id="data" name="data" required>
 
-        <label for="categoria">Categoria</label>
-        <input type="text" id="categoria" name="categoria" required>
+            <label for="descricao">Descrição (opcional)</label>
+            <textarea id="descricao" name="descricao" rows="4"></textarea>
 
-        <button type="submit">Adicionar Receita</button>
-    </form>
+            <label for="categoria">Caregoria</label>
+            <input type="text" id="categoria" name="categoria" required>
+
+            <button type="submit">Adicionar Receita</button>
+        </form>
+    </div>    
+    
 </body>
 </html>
